# Plugin

catkin_ws_10/devel/: .catkin  local_setup.sh
catkin_ws_10/devel/lib/pkgconfig/: kdl_kinematics_plugin.pc
catkin_ws_10/devel/share/kdl_kinematics_plugin/cmake/: kdl_kinematics_pluginConfig.cmake
catkin_ws_10/src/kdl_kinematics_plugin/: CMakeLists.txt  kdl_kinematics_plugin_description.xml
catkin_ws_10/src/kdl_kinematics_plugin/include/kdl_kinematics_plugin/: kdl_kinematics_plugin.h
catkin_ws_10/src/kdl_kinematics_plugin/src/: kdl_kinematics_plugin.cpp
catkin_ws_11/devel/: .catkin  .rosinstall
catkin_ws_11/devel/lib/ik_load/: ik_load
catkin_ws_11/devel/lib/pkgconfig/: ik_load.pc
catkin_ws_11/devel/share/ik_load/cmake/: ik_loadConfig.cmake
catkin_ws_11/src/ik_load/: CMakeLists.txt  package.xml
catkin_ws_11/src/ik_load/launch/: load_ik.launch
catkin_ws_11/src/ik_load/src/: load_ik.cpp
